end main_slider, begin sale

--- a/index.html
+++ b/index.html
@@ -10,68 +10,87 @@
 
 <body>
 
-    <header class="header">
-        <div class="center">
-            <a href="/" class="logo"><img src="img/logo.png" alt=""></a>
-            <nav class="nav">
-                <a href="#">Sale of the day</a>
-                <a href="#">popular product</a>
-                <a href="#">this weeks hot deals</a>
-                <a href="#">other products</a>
-            </nav>
-        </div>
-    </header>
+    <div class="wrapper">
+        <header class="header">
+            <div class="center">
+                <a href="/" class="logo"><img src="img/logo.png" alt=""></a>
+                <nav class="nav">
+                    <a href="#">Sale of the day</a>
+                    <a href="#">popular product</a>
+                    <a href="#">this weeks hot deals</a>
+                    <a href="#">other products</a>
+                </nav>
+            </div>
+        </header>
 
-    <section class="main_slider">
-        <div class="center">
-            <ul>
-                <li>
-                    <img src="img/slide_img_1.png" alt="">
-                    <div class="main_slider_text">
-                        <h3 class="main_slider_title">Headphone</h3>
-                        <p class="main_slider_desc">оf the printing and typesetting industry</p>
-                        <div class="main_slider_price">189 usd</div>
-                        <a href="#" class="main_slider_btn">Buy now<i></i></a>
-                    </div>
-                </li>
-                <li>
-                    <img src="img/slide_img_2.png" alt="">
-                    <div class="main_slider_text">
-                        <h3 class="main_slider_title">Beats by Dr. Dre</h3>
-                        <p class="main_slider_desc">оf the printing and typesetting industry</p>
-                        <div class="main_slider_price">400 usd</div>
-                        <a href="#" class="main_slider_btn">Buy now<i></i></a>
-                    </div>
-                </li>
-                <li>
-                    <img src="img/slide_img_3.png" alt="">
-                    <div class="main_slider_text">
-                        <h3 class="main_slider_title">Monster Beats</h3>
-                        <p class="main_slider_desc">оf the printing and typesetting industry</p>
-                        <div class="main_slider_price">300 usd</div>
-                        <a href="#" class="main_slider_btn">Buy now<i></i></a>
-                    </div>
-                </li>
-            </ul>
+        <section class="main_slider">
+            <div class="center">
+                <ul>
+                    <li>
+                        <img src="img/slide_img_1.png" alt="">
+                        <div class="main_slider_text">
+                            <h3 class="main_slider_title">Headphone</h3>
+                            <p class="main_slider_desc">оf the printing and typesetting industry</p>
+                            <div class="main_slider_price">189 usd</div>
+                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/slide_img_2.png" alt="">
+                        <div class="main_slider_text">
+                            <h3 class="main_slider_title">Beats by Dr. Dre</h3>
+                            <p class="main_slider_desc">оf the printing and typesetting industry</p>
+                            <div class="main_slider_price">400 usd</div>
+                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/slide_img_3.png" alt="">
+                        <div class="main_slider_text">
+                            <h3 class="main_slider_title">Monster Beats</h3>
+                            <p class="main_slider_desc">оf the printing and typesetting industry</p>
+                            <div class="main_slider_price">300 usd</div>
+                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                        </div>
+                    </li>
+                </ul>
 
-            <div class="main_slider_controls">
-                <div class="main_slider_controls_count">
-                    <span>02</span>/<ins>03</ins>
-                </div>
-                <div class="main_slider_controls_pags">
-                    <span></span>
-                    <span class="active"></span>
-                    <span></span>
-                </div>
-                <div class="main_slider_controls_btns">
-                    <button class="prev"></button>
-                    <button class="next"></button>
+                <div class="main_slider_controls">
+                    <div class="main_slider_controls_count">
+                        <span></span>/<ins></ins>
+                    </div>
+                    <div class="main_slider_controls_pags"></div>
+                    <div class="main_slider_controls_btns">
+                        <button class="prev"></button>
+                        <button class="next"></button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section class="sale">
+            <div class="center">
+                <h2 class="h2"><span>s</span>ale of the day</h2>
+                <div class="sale_block">
+                    <div class="sale_block_left">
+                        <img src="img/img_1.png" alt="">
+                        <div class="counter_sale">
+                            <div class="counter_sale_title">
+                                <span>iphone 6s silver-64gb</span>
+                                <p>sale off: <ins>$250/00</ins> - 370/00</p>
+                            </div>
+                            <div class="counter_sale_desc">
+                                Lorem Ipsum is simply dummy text of the
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <script src="js/jquery-1.7.2.min.js"></script>
+    <script src="js/kinetic.js"></script>
     <script src="js/pixelScreen.js"></script>
     <script src="js/scripts.js"></script>
 </body>
