--- a/index.html
+++ b/index.html
@@ -89,7 +89,68 @@
                                 data-labels-days="Day,Days" data-labels-hours="Hour,Hours"
                                 data-labels-minutes="Min,Mins" data-labels-seconds="Sec,Secs">
                             </div>
+                            <div class="soc">
+                                <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                <a href="#"><img src="img/soc_3.png" alt=""></a>
+                            </div>
                         </div>
+                    </div>
+                    <div class="sale_block_right">
+                        <ul>
+                            <li>
+                                <div class="sale_block_right_category">Watch</div>
+                                <div class="sale_block_right_title">Apple Watch Sport Green</div>
+                                <div class="sale_block_right_price">price: <span>$400.00</span></div>
+                                <div class="sale_block_right_img">
+                                    <img src="img/g_1.jpg" alt="">
+                                </div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="sale_block_right_category">Headphone</div>
+                                <div class="sale_block_right_title">Beat Beautiful</div>
+                                <div class="sale_block_right_price">price: <span>$400.00</span></div>
+                                <div class="sale_block_right_img">
+                                    <img src="img/g_2.jpg" alt="">
+                                </div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="sale_block_right_category">Headphone</div>
+                                <div class="sale_block_right_title">Beat Phone VIP</div>
+                                <div class="sale_block_right_price">price: <span>$450.00</span></div>
+                                <div class="sale_block_right_img">
+                                    <img src="img/g_3.jpg" alt="">
+                                </div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="sale_block_right_category">Headphone</div>
+                                <div class="sale_block_right_title">Beat Studio Wireless </div>
+                                <div class="sale_block_right_price">price: <span>$250.00</span></div>
+                                <div class="sale_block_right_img">
+                                    <img src="img/g_4.jpg" alt="">
+                                </div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
