end first block popular

--- a/index.html
+++ b/index.html
@@ -155,6 +155,54 @@
                 </div>
             </div>
         </section>
+
+        <section class="popular">
+            <div class="center">
+                <h2 class="h2"><span>p</span>opular product</h2>
+                <div class="popular_tab_btns">
+                    <a href="#!"><img src="img/products-tabs-v1-icon1.png" alt=""></a>
+                    <a href="#!" class="active"><img src="img/products-tabs-v1-icon2.png" alt=""></a>
+                    <a href="#!"><img src="img/products-tabs-v1-icon3.png" alt=""></a>
+                    <a href="#!"><img src="img/products-tabs-v1-icon4.png" alt=""></a>
+                    <a href="#!"><img src="img/products-tabs-v1-icon5.png" alt=""></a>
+                    <a href="#!"><img src="img/products-tabs-v1-icon6.png" alt=""></a>
+                </div>
+                <div class="popular_all_tabs_block">
+                    <ul>
+                        <li>
+                            <div class="popular_main_goods_left">
+                                <div class="popular_gallery">
+                                    <div class="popular_gallery_main">
+                                        <img src="img/g_5.jpg" alt="">
+                                        <img src="img/g_6.jpg" alt="">
+                                        <img class="active" src="img/g_7.jpg" alt="">
+                                    </div>
+                                    <div class="popular_gallery_prev">
+                                        <span><img src="img/g_5.jpg" alt=""></span>
+                                        <span><img src="img/g_6.jpg" alt=""></span>
+                                        <span class="active"><img src="img/g_7.jpg" alt=""></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="popular_main_goods_right">
+                                <div class="popular_goods_title">Apple Watch Sport Green</div>
+                                <div class="popular_goods_price">price: <span>$400.00</span></div>
+                                <div class="popular_goods_char">
+                                    <span>Windows 10</span>
+                                    <span>Intel Quad Core Processors</span>
+                                    <span>NVIDIA GeForce GTX 950M Graphics Card</span>
+                                </div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="js/jquery-1.7.2.min.js"></script>
