black section on 57min

--- a/index.html
+++ b/index.html
@@ -615,6 +615,58 @@
                 </div>
             </div>
         </section>
+
+        <section class="black_section">
+            <div class="center">
+                <div class="black_section_circle"></div>
+                <div class="black_section_carousel">
+                    <ul>
+                        <li>
+                            <div class="black_section_carousel_mainimg">
+                                <img src="img/g_12.png" alt="">
+                                <img src="img/g_13.png" alt="">
+                                <img src="img/g_14.png" alt="">
+                            </div>
+                            <div class="black_section_carousel_previmg">
+                                <span><img src="img/g_12.png" alt=""></span>
+                                <span><img src="img/g_13.png" alt=""></span>
+                                <span><img src="img/g_14.png" alt=""></span>
+                            </div>
+                            <button class="prev"></button>
+                            <button class="next"></button>
+                        </li>
+                        <li>
+                            <div class="black_section_carousel_mainimg">
+                                <img src="img/g_14.png" alt="">
+                                <img src="img/g_13.png" alt="">
+                                <img src="img/g_12.png" alt="">
+                            </div>
+                            <div class="black_section_carousel_previmg">
+                                <span><img src="img/g_14.png" alt=""></span>
+                                <span><img src="img/g_13.png" alt=""></span>
+                                <span><img src="img/g_12.png" alt=""></span>
+                            </div>
+                            <button class="prev"></button>
+                            <button class="next"></button>
+                        </li>
+                        <li>
+                            <div class="black_section_carousel_mainimg">
+                                <img src="img/g_12.png" alt="">
+                                <img src="img/g_13.png" alt="">
+                                <img src="img/g_14.png" alt="">
+                            </div>
+                            <div class="black_section_carousel_previmg">
+                                <span><img src="img/g_12.png" alt=""></span>
+                                <span><img src="img/g_13.png" alt=""></span>
+                                <span><img src="img/g_14.png" alt=""></span>
+                            </div>
+                            <button class="prev"></button>
+                            <button class="next"></button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="js/jquery-1.7.2.min.js"></script>
