end black_section

--- a/index.html
+++ b/index.html
@@ -651,19 +651,36 @@
                         </li>
                         <li>
                             <div class="black_section_carousel_mainimg">
-                                <img src="img/g_12.png" alt="">
                                 <img src="img/g_13.png" alt="">
+                                <img src="img/g_12.png" alt="">
                                 <img src="img/g_14.png" alt="">
                             </div>
                             <div class="black_section_carousel_previmg">
-                                <span><img src="img/g_12.png" alt=""></span>
                                 <span><img src="img/g_13.png" alt=""></span>
+                                <span><img src="img/g_12.png" alt=""></span>
                                 <span><img src="img/g_14.png" alt=""></span>
                             </div>
                             <button class="prev"></button>
                             <button class="next"></button>
                         </li>
                     </ul>
+                </div>
+                <div class="black_section_right">
+                    <h2 class="h2"><span>T</span>HIS WEEK'S HOT DEALS</h2>
+                    <p>Video game & consoles</p>
+                    <p>Beats Studio Wireless Over-Ear Black Headphones</p>
+                    <ul>
+                        <li>Enjoy the largest library of games, with blockbuster titles</li>
+                        <li>Flat Folding Headphone Adjustable Headband</li>
+                        <li>32mm Speakers 1.2m Cable</li>
+                    </ul>
+                    <div class="price"><span>price:</span> <ins>$250.00</ins> - $380.00 </div>
+                    <div class="soc">
+                        <a href="#"><img src="img/soc_4.png" alt=""></a>
+                        <a href="#"><img src="img/soc_1.png" alt=""></a>
+                        <a href="#"><img src="img/soc_2.png" alt=""></a>
+                        <a href="#"><img src="img/soc_3.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </section>
