--- a/index.html
+++ b/index.html
@@ -684,6 +684,161 @@
                 </div>
             </div>
         </section>
+
+        <section class="multi">
+            <div class="center">
+                <div class="multi_block">
+                    <h3 class="h3"><span>F</span>eature product</h3>
+                    <ul>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_1.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_2.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_3.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="multi_block">
+                    <h3 class="h3"><span>t</span>op review</h3>
+                    <ul>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_4.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_5.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_6.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="multi_block">
+                    <h3 class="h3"><span>p</span>opular</h3>
+                    <ul>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_7.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_8.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="multi_img">
+                                <img src="img/m_9.jpg" alt="">
+                            </div>
+                            <div class="multi_text">
+                                <div class="multi_category">Headphone</div>
+                                <div class="multi_title">Beat Phone VIP Chronograph Watch</div>
+                                <div class="price">price: <span>$450.00</span></div>
+                                <div class="soc">
+                                    <a href="#"><img src="img/soc_1.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_2.png" alt=""></a>
+                                    <a href="#"><img src="img/soc_3.png" alt=""></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="js/jquery-1.7.2.min.js"></script>
