--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper" id="id0">
         <header class="header">
             <div class="center">
-                <a href="/" class="logo"><img src="img/logo.png" alt=""></a>
+                <a href="#id0" class="logo"><img src="img/logo.png" alt=""></a>
                 <nav class="nav">
-                    <a href="#">Sale of the day</a>
-                    <a href="#">popular product</a>
-                    <a href="#">this weeks hot deals</a>
-                    <a href="#">other products</a>
+                    <a href="#id1">Sale of the day</a>
+                    <a href="#id2">popular product</a>
+                    <a href="#id3">this weeks hot deals</a>
+                    <a href="#id4">other products</a>
                 </nav>
             </div>
         </header>
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <section class="sale">
+        <section class="sale" id="id1">
             <div class="center">
                 <h2 class="h2"><span>s</span>ale of the day</h2>
                 <div class="sale_block">
@@ -156,7 +156,7 @@
             </div>
         </section>
 
-        <section class="popular">
+        <section class="popular" id="id2">
             <div class="center">
                 <h2 class="h2"><span>p</span>opular product</h2>
                 <div class="popular_tab_btns">
@@ -616,7 +616,7 @@
             </div>
         </section>
 
-        <section class="black_section">
+        <section class="black_section" id="id3">
             <div class="center">
                 <div class="black_section_circle"></div>
                 <div class="black_section_carousel">
@@ -685,7 +685,7 @@
             </div>
         </section>
 
-        <section class="multi">
+        <section class="multi" id="id4">
             <div class="center">
                 <div class="multi_block">
                     <h3 class="h3"><span>F</span>eature product</h3>
