--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <h3 class="main_slider_title">Headphone</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">189 usd</div>
-                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
                         </div>
                     </li>
                     <li>
@@ -41,7 +41,7 @@
                             <h3 class="main_slider_title">Beats by Dr. Dre</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">400 usd</div>
-                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
                         </div>
                     </li>
                     <li>
@@ -50,7 +50,7 @@
                             <h3 class="main_slider_title">Monster Beats</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">300 usd</div>
-                            <a href="#" class="main_slider_btn">Buy now<i></i></a>
+                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
                         </div>
                     </li>
                 </ul>
@@ -840,6 +840,27 @@
             </div>
         </section>
     </div>
+
+    <div class="popup">
+        <div class="close"></div>
+        <div class="popup_title">Headphone Beat VIP</div>
+        <div class="popup_content">
+            <div class="popup_img">
+                <img src="img/m_1.jpg" alt="">
+            </div>
+            <div class="popup_text">
+                <div class="popup_category">Headphone</div>
+                <div class="popup_goods_title">Beat Phone VIP Chronograph Watch</div>
+                <div class="price">price: <span>$450.00</span></div>
+                <form action="">
+                    <input type="text" placeholder="+7(900)500-70-70">
+                    <button type="submit">Buy Now<i></i></button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg_popup"></div>
 
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/kinetic.js"></script>
