end data on main slider

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                             <h3 class="main_slider_title">Headphone</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">189 usd</div>
-                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
+                            <a data-title="Headphone" data-category="Headphone"
+                                data-desc="оf the printing and typesetting industry" data-price="$189"
+                                data-img="img/slide_img_1.png" href="#" class="main_slider_btn open_popup">Buy
+                                now<i></i></a>
                         </div>
                     </li>
                     <li>
@@ -41,7 +44,10 @@
                             <h3 class="main_slider_title">Beats by Dr. Dre</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">400 usd</div>
-                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
+                            <a data-title="Beats by Dr. Dre" data-category="Headphone"
+                                data-desc="оf the printing and typesetting industry" data-price="$400"
+                                data-img="img/slide_img_2.png" href="#" class="main_slider_btn open_popup">Buy
+                                now<i></i></a>
                         </div>
                     </li>
                     <li>
@@ -50,7 +56,10 @@
                             <h3 class="main_slider_title">Monster Beats</h3>
                             <p class="main_slider_desc">оf the printing and typesetting industry</p>
                             <div class="main_slider_price">300 usd</div>
-                            <a href="#" class="main_slider_btn open_popup">Buy now<i></i></a>
+                            <a data-title="Monster Beats" data-category="Headphone"
+                                data-desc="оf the printing and typesetting industry" data-price="$300"
+                                data-img="img/slide_img_3.png" href="#" class="main_slider_btn open_popup">Buy
+                                now<i></i></a>
                         </div>
                     </li>
                 </ul>
